--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,12 @@ div#conteudo div.col-md-3, div#conteudo div.col-md-4, div#conteudoBook div.col-m
   margin-top: 30px;
 }
 
+
+
+.carousel-control-prev,
+.carousel-control-next{
+  width: 5%!important;
+}
    
 .carousel-inner img {
   width: 100%;
